<resources>
    <string name="mitaxiregister_et_mailemergency_hint_2">emergency e-mail</string>
    <string name="mitaxiregister_et_telemergency_hint_2">emercengy cell phone</string>
    <string name="app_name">Traxi</string>
    <string name="action_settings">Tools</string>
    <string name="action_historial">Historical</string>
    <string name="action_cuenta">Account</string>
    <string name="action_help">Guide</string>
    <string name="abs_layout_tv_titulo">Search</string>
    <string name="mitaxiregister_btn_manually">Register</string>
    <string name="title_activity_busca_placa">Search licence plate</string>
    <string name="mitaxiregister_name">The emergency e-mail and cell phone number must belong to the same person.</string>
    <string name="mitaxiregister_error">Verify that you have entered your emergency contact information correctly before you proceed.</string>
    <string name="mitaxiregister_error_string">Insert valid chain [a-z A-Z].</string>
    <string name="mitaxiregister_error_number">Insert valid number [0 9].</string>
    <string name="mitaxiregister_error_email">Use a valid e-mail format.</string>
    <string name="mitaxiregister_empty">No fields may be left empty.</string>
    <string name="mitaxiregister_tv_title">Registration</string>
    <string name="mitaxiregister_et_name_hint">username</string>
    <string name="mitaxiregister_et_email_hint">example@mail.com</string>
    <string name="mitaxiregister_et_teluser_hint">Phone number</string>
    <string name="mitaxiregister_et_telemergency_hint">Emergency cell phone number</string>
    <string name="mitaxiregistermanually_btn_contactos">+</string>
    <string name="mitaxiregistermanually_subiendo_la_info">Uploading data, please hold .....</string>
    <string name="mitaxiregister_validar_contactos_datos_no_guardados">Data not saved.</string>
    <string name="mitaxiregister_validar_contactos_guardar">Save</string>
    <string name="adeudos_row_titulo">Title</string>
    <string name="adeudos_row_descripcion">Description</string>
    <string name="mitaxiregister_et_mailemergency_hint">Emergency e-mail</string>
    <string name="mitaxiregister_et_paraque">What is this for?</string>
    <string name="mitaxiregister_et_emergencias">Emergency contact</string>
    <string name="mitaxiregister_btn_cancel">Cancel</string>
    <string name="mitaxiregister_btn_ok">Accept</string>
    <string name="edittext_emtpy">Fill out all fields.</string>
    <string name="edittext_wrong_info">Correct all invalid text fields.</string>
    <string name="edittext_error_string">Insert valid chain [a-z A-Z].</string>
    <string name="edittext_error_number">Insert valid number [0&#8211;9].</string>
    <string name="edittext_error_nickname">Use only [a-z A-Z 0&#8211;9 .-_ ].</string>
    <string name="edittext_error_email">Use a valid e-mail format.</string>
    <string name="edittext_error_formato_placa">Incomplete licence plate (example: A12345)</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="transaction_wrong">Ops#8230; The server connection has encountered an error.</string>
    <string name="paraque_subtitulo">Security options</string>
    <string name="paraque_titulo">WARNING</string>
    <string name="paraque_aceptar">Accept</string>
    <string name="paraque_cancelar">Cancel</string>
    <string name="title_activity_datos">Information</string>
    <string name="title_activity_adeudos">Debts</string>
    <string name="title_activity_comentarios">Comments</string>
    <string name="keyboard_borrar">Delete</string>
    <string name="gps_subtitulo">GPS off</string>
    <string name="gps_texto">Do you want to activate it?</string>
    <string name="row_historial_borrar">Do you want to delete it?</string>
    <string name="texto_calificacion_25">According to our records, this vehicle is NOT trustworthy. In case of boarding it, we advise that you do it while taking all possible preventive measures and staying alert at all times.</string>
    <string name="texto_calificacion_49">According to our records, this vehicle may not be trustworthy. In case of boarding it, we advise that you do it while taking all possible preventive measures and staying alert at all times.</string>
    <string name="texto_calificacion_60">According to our records, this vehicle has a low level of risk. In case of boarding it, we advise that you maintain alert at all times.</string>
    <string name="texto_calificacion_80">According to our records, this vehicle shows a good level of trustworthiness. Nevertheless, we advise that you stay alert at all times.</string>
    <string name="texto_calificacion_90">According to our records, this vehicle is reliable. Nevertheless, we advise that you stay alert at all times.</string>
    <string name="texto_calificacion_100">According to our records, this vehicle is highly reliable and you are likely to enjoy your ride. This taxi is responsible upon delivering service, and is aware of its legal obligations. Nevertheless, we advise that you stay alert at all times.</string>
    <string name="texto_significado_calif"> What does this grade mean?</string>
    <string name="texto_significado_el_viaje_inicio">Your trip has begun!\nPlease hold while we locate your position ....</string>
    <string name="inicio_de_trabajo_tv_foto">It only works on doors!</string>
    <string name="busca_placa_btn_tomarfoto">Take picture</string>
    <string name="busca_placa_btn_tomarfoto_entendi">I understand</string>
    <string name="camara_guia_foto">How to take picture</string>
    <string name="inicio_de_trabajo_tv_nombre">Enter licence plate</string>
    <string name="inicio_de_trabajo_et_placa">Licence plate</string>
    <string name="busca_placa_btn_emergencia">Emergency</string>
    <string name="busca_placa_btn_tips">Tips</string>
    <string name="busca_placa_tomar_foto">Picture</string>
    <string name="adeudo_tenencia">Car ownership tax</string>
    <string name="sin_adeudo_tenencia">No tax debts were found</string>
    <string name="con_adeudo_tenencia">Taxi presents tax debts</string>
    <string name="adeudo_revista">Public transportation vehicle listing</string>
    <string name="sin_revista">Vehicle not found in listing</string>
    <string name="con_revista">Vehicle found in listing</string>
    <string name="adeudo_anio">Vehicle</string>
    <string name="carro_viejo">No longer optimal</string>
    <string name="carro_nuevo">Optimal conditions</string>
    <string name="adeudo_infracciones">Violations</string>
    <string name="tiene_infraccion">Has unpaid fines</string>
    <string name="no_tiene_infraccion">No fines</string>
    <string name="adeudo_verificaciones">Verification</string>
    <string name="tiene_verificaciones">Owns verified permit sticker</string>
    <string name="no_tiene_verificaciones">None found</string>
    <string name="pref_send_report">Send report</string>
    <string name="pref_send_report_summary">Help us improve this app</string>
    <string name="pref_sync_frequency">Tracking frequency</string>
    <string name="pref_sync_frequency_summary">Select frequency</string>
    <string name="pref_sync_frequency_paranoia">Notice frequency</string>
    <string name="pref_sync_frequency_summary_paranoia">How frequently do you wish to receive notices throughout your trip?</string>
    <string name="pref_user_profile">Configuration</string>
    <string name="pref_update_setting">Tracking</string>
    <string name="pref_update_setting_ayuda">Help</string>
    <string name="title_activity_mapa_tracking">Map_tracking</string>
    <string name="title_activity_califica_chofer">Rate_driver</string>
    <string name="title_activity_califica_taxi">Rate_taxi</string>
    <string name="pref_busqueda_avanzada">Activate fine location</string>
    <string name="pref_busqueda_avanzada_summary">When active, location is defined by GPS, which is more accurate</string>
    <string name="titulo_uno_general">GENERAL</string>
    <string name="titulo_dos_detalles">DETAILS</string>
    <string name="titulo_tres_comentarios">COMMENTS</string>
    <string name="title_activity_activity_null">Activity_null</string>
    <string name="title_activity_send_foto">Send Photo</string>
    <string name="adeudos_titulo_tv_amigos">Friends who have taken this taxi:</string>
    <string name="mitaxiregistermanually_btn_facebook">Facebook</string>
    <string name="tv_adeudos_estrellas">Grade 0.0 out of 5.0</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="califica_taxi_tv_titulo">Help us evaluate this service</string>
    <string name="califica_taxi_tv_titulo_calif">How was the taxi service?</string>
    <string name="califica_taxi_tv_titulo_opinion">Share your thoughts</string>
    <string name="dialogo_califica_servicio_et_comentario">Comment</string>
    <string name="dialogo_califica_servicio_btnCancelar">Finish</string>
    <string name="dialogo_califica_servicio_btnAceptar">Send</string>
    <string name="dialogo_califica_servicio_enviar_comentario">Your comments were sent.</string>
    <string name="dialogo_califica_servicio_NO_enviar_comentario">End of service</string>
    <string name="mitaxi_googlemaps_tv_destination">Destination</string>
    <string name="mitaxi_googlemaps_btn_destino">Go</string>
    <string name="mitaxi_googlemaps_actv_destination">Example: Colonia Roma, calle 1</string>
    <string name="mapa_tracking_terminoviaje">Trip ended.</string>
    <string name="mapa_tracking_miviaje">My trip</string>
    <string name="datos_tv_titulo">Vehicle information</string>
    <string name="datos_tv_marca">Brand:</string>
    <string name="datos_tv_niveles_confianza">Level of trust</string>
    <string name="datos_tv_descripcion">blablablabla</string>
    <string name="prefKeyResetQuests">resetQuests</string>
    <string name="prefKeyResetQuests_titulo">About</string>
    <string name="prefKeyResetQuests_subtitulo">TRAXI</string>
    <string name="prefKeyResetQuests_texto">This application was developed for CÓDIGO.CDMX\n\n
        Android developer:\n
        \tMike Morán @yosoymikesaurio\n\n
        IOS developer:\n
        \tCarlos Castellanos @rockarloz\n\n
        Collaborators:\n
        \tAntuan Chávez @ntuanChavez\n
        \tSergio Beltrán @ssbeltran\n
        \tEdgar Zavala @zace3d</string>
    <string name="prefKeyResetQuests_boton">Accept</string>
    <string name="mensaje_para_panic"><B>PANIC BUTTON:</B>  It only works throughout the duration of your trip. In case you feel threatened while riding the taxi, you can press your cell phone’s on/off button 5 times and a text message will be sent to the emergency contacts that you determine beforehand (max. 2) and e-mails containing your location, the taxi’s license plate, percentage of remaining battery and a few recommendations as to how to react.
        \n\n<B>PARANÓICO:</B> If you activate this mode, the application will ask you every couple of minutes (you select the frequency) if you are doing okay. If you don’t reply within a minute, the panic button will activate on its own. 
        \n\n\n<B>WARNING:</B> THIS IS A BETA VERSION OF THE APPLICATION, WHICH MEANS THAT IT MAY PRESENT CERTAIN ERRORS. MAKE SURE YOU TAKE SERIOUS PRECAUTIONS AT ALL TIMES.
        \n\nTO ENABLE TRAXI TO SEND A TEXT MESSAGE IN CASE YOU ACTIVATE THE PANIC BUTTON, YOU MUST HAVE ENOUGH CREDIT TO DO SO. YOU WILL BE CHARGED ACCORDING TO YOUR PHONE COMPANY’S RATES. TO SEND THE EMERGENCY E-MAIL, YOUR PHONE MUST HAVE ACCESS TO AN INTERNET CONNECTION. 
        \n\nYOU MUST ACCEPT IN ORDER TO ACCESS THIS OPTION.</string>
    <string name="mensaje_para_panic_boton_aceptar">Accept</string>
    <string name="mensaje_para_panic_boton_cancelar">Cancel</string>
    <string name="mensaje_para_panic_titulo">Traxi counts with 2 security levels:</string>
    <string name="preferencias_version_titulo">1.2.9.1</string>
    <string name="preferencias_version">Version</string>
</resources>