<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/action_settings" >
       

        <codigo.labplc.mx.traxi.configuracion.OptionDialogPreference
            android:dialogIcon="@android:drawable/ic_dialog_info"
            android:dialogMessage="@string/prefKeyResetQuests_texto"
            android:key="@string/prefKeyResetQuests"
            android:positiveButtonText="@string/prefKeyResetQuests_boton"
            android:summary="@string/prefKeyResetQuests_subtitulo"
            android:title="@string/prefKeyResetQuests_titulo" />
         <Preference
            android:key="pref_static_field_key"
            android:selectable="false"
            android:summary="@string/preferencias_version_titulo"
            android:title="@string/preferencias_version" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
    </PreferenceCategory>

</PreferenceScreen>