<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/gris_obscuro_trans"
    android:gravity="center"
    tools:context=".RegistroContactosEmergenciaActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <Button
            android:id="@+id/activity_emergencia_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_generic"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/mensaje_para_panic_boton_cancelar"
            android:textColor="@drawable/selector_txt_boton_redondo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/activity_emergencia_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_generic"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/mensaje_para_panic_boton_aceptar"
            android:textColor="@drawable/selector_txt_boton_redondo"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_margin="15dp" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/marco_color_base"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/activity_emergencia_tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_para_panic_titulo"
                android:gravity="center"
                android:layout_marginBottom="3dp" />
            <TextView
                android:id="@+id/activity_emergencia_tv_contenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_para_panic" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>