<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/marco" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                 android:id="@+id/dialogo_salir_tv_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/gps_subtitulo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gris_claro" />

            <TextView
                android:id="@+id/dialogo_salir_tv_nombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gps_texto" />

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp" />

            <View
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialogo_salir_btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:background="@drawable/selector_btn_generic"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/paraque_cancelar"
                android:textColor="@drawable/selector_txt_boton_redondo" />

            <Button
                android:id="@+id/dialogo_salir_btnAceptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight=".5"
                android:background="@drawable/selector_btn_generic"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/paraque_aceptar"
                android:textColor="@drawable/selector_txt_boton_redondo" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>